# cot-analyzer

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  run-local.sh
.agents/: AGENTS.md
.claude/: settings.json
.github/workflows/: python-test.yml
config/: params.yaml
doc/: ARCHITECTURE.md  data_architecture.md
scripts/: check_dep_floors.py  max-pain.py  push_data_cache_to_server.sh
server-side/: README.md  cot-analyzer.service  launch-cot-analyzer.sh  restart.sh
src/: CotCmrIndexer.py  CotDataDownloader.py  CotDatabase.py  CotIndexer.py  CotSymbolCodeMap.py  app_cot.py  app_utils.py  constants.py  db.py  indexer.py  main.py  metrics.py  utils.py  viz_config.py  viz_constants.py
src/assets/: clientside.js  custom.css
src/components/: plot_colors.py  plot_helpers.py  plot_layout.py  plot_options.py  plot_registry.py  plot_traces.py  signal_cards.py  tearsheet.py  tv_layout.py
src/pages/: about.py  admin.py  aggregation.py  analysis.py  graphs.py  heatmap.py  helpers.py  home.py  options.py  positioning.py
src/pages/analytics/: aggregation.py  analysis.py  graphs.py  heatmap.py  oi_alignment.py  positioning.py
src/pages/citpy/: citpy.py  citpy_view.py
src/pages/system/: about.py  admin.py  options.py  raw_data.py
tests/: test_heatmap_styles.py  test_plot_registry.py  test_setup_copy.py  test_signal_card_reads.py  test_smoke.py
